--- a/analysis_py.ipynb
+++ b/analysis_py.ipynb
@@ -225,29 +225,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 555,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['crontab']"
+       "['多边形']"
       ]
      },
-     "execution_count": 499,
+     "execution_count": 555,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 接受用户输入\n",
-    "query_terms = seg.cut('crontab')\n",
+    "query_terms = seg.cut('多边形')\n",
     "query_terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 557,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "True"
       ]
      },
-     "execution_count": 501,
+     "execution_count": 557,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 558,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 561,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 562,
    "metadata": {},
    "outputs": [
     {
@@ -372,34 +372,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>crontab-tutorial.md</td>\n",
-       "      <td>13</td>\n",
-       "      <td>9.778627e-01</td>\n",
+       "      <th>9</th>\n",
+       "      <td>complex-plane-and-eulers-formular-and-liuhuis-...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8.072534e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>linux-tools-recommendation-1.md</td>\n",
-       "      <td>40</td>\n",
-       "      <td>4.837851e-02</td>\n",
+       "      <th>46</th>\n",
+       "      <td>methods-telling-if-a-point-is-inside-some-poly...</td>\n",
+       "      <td>46</td>\n",
+       "      <td>7.465705e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>learn-svg.md</td>\n",
-       "      <td>37</td>\n",
-       "      <td>5.679358e-16</td>\n",
+       "      <th>30</th>\n",
+       "      <td>implementing-a-rubkis-cube-in-mathematica.md</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1.331943e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>mongo-db-mac-os-tutorial.md</td>\n",
-       "      <td>48</td>\n",
-       "      <td>5.589611e-16</td>\n",
+       "      <th>34</th>\n",
+       "      <td>introducing-my-new-project.md</td>\n",
+       "      <td>34</td>\n",
+       "      <td>9.781453e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>feature-request-scripts-hub.md</td>\n",
-       "      <td>20</td>\n",
-       "      <td>4.742996e-16</td>\n",
+       "      <th>8</th>\n",
+       "      <td>cellular-automata-infectious-disease-simulatio...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8.321220e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -408,34 +408,34 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>correct-time-in-cloudcone-vps.md</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9.507361e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>learning-language-interoperability-and-linking.md</td>\n",
+       "      <td>38</td>\n",
+       "      <td>7.196818e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>minimum-gulp-workspace.md</td>\n",
+       "      <td>47</td>\n",
+       "      <td>6.691183e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>how-fast.md</td>\n",
        "      <td>25</td>\n",
-       "      <td>5.507013e-18</td>\n",
+       "      <td>4.023889e-18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>generate-parentheses-base-on-desicion-procedur...</td>\n",
-       "      <td>23</td>\n",
-       "      <td>4.816387e-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>authorship-homogeneous-test-based-on-text-segm...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.343183e-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>association-rules-mining-and-apriori-algorithm.md</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4.079663e-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>release-a-huge-disk-space-in-macos.md</td>\n",
-       "      <td>60</td>\n",
-       "      <td>3.176555e-18</td>\n",
+       "      <th>1</th>\n",
+       "      <td>a-layout-algorithm-for-equal-returns.md</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.290496e-19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -444,35 +444,35 @@
       ],
       "text/plain": [
        "                                         article_name  row_num_in_doc_matrix  \\\n",
-       "13                                crontab-tutorial.md                     13   \n",
-       "40                    linux-tools-recommendation-1.md                     40   \n",
-       "37                                       learn-svg.md                     37   \n",
-       "48                        mongo-db-mac-os-tutorial.md                     48   \n",
-       "20                     feature-request-scripts-hub.md                     20   \n",
+       "9   complex-plane-and-eulers-formular-and-liuhuis-...                      9   \n",
+       "46  methods-telling-if-a-point-is-inside-some-poly...                     46   \n",
+       "30       implementing-a-rubkis-cube-in-mathematica.md                     30   \n",
+       "34                      introducing-my-new-project.md                     34   \n",
+       "8   cellular-automata-infectious-disease-simulatio...                      8   \n",
        "..                                                ...                    ...   \n",
+       "12                   correct-time-in-cloudcone-vps.md                     12   \n",
+       "38  learning-language-interoperability-and-linking.md                     38   \n",
+       "47                          minimum-gulp-workspace.md                     47   \n",
        "25                                        how-fast.md                     25   \n",
-       "23  generate-parentheses-base-on-desicion-procedur...                     23   \n",
-       "4   authorship-homogeneous-test-based-on-text-segm...                      4   \n",
-       "3   association-rules-mining-and-apriori-algorithm.md                      3   \n",
-       "60              release-a-huge-disk-space-in-macos.md                     60   \n",
+       "1             a-layout-algorithm-for-equal-returns.md                      1   \n",
        "\n",
        "       match_val  \n",
-       "13  9.778627e-01  \n",
-       "40  4.837851e-02  \n",
-       "37  5.679358e-16  \n",
-       "48  5.589611e-16  \n",
-       "20  4.742996e-16  \n",
+       "9   8.072534e-01  \n",
+       "46  7.465705e-01  \n",
+       "30  1.331943e-01  \n",
+       "34  9.781453e-16  \n",
+       "8   8.321220e-16  \n",
        "..           ...  \n",
-       "25  5.507013e-18  \n",
-       "23  4.816387e-18  \n",
-       "4   4.343183e-18  \n",
-       "3   4.079663e-18  \n",
-       "60  3.176555e-18  \n",
+       "12  9.507361e-18  \n",
+       "38  7.196818e-18  \n",
+       "47  6.691183e-18  \n",
+       "25  4.023889e-18  \n",
+       "1   4.290496e-19  \n",
        "\n",
        "[73 rows x 3 columns]"
       ]
      },
-     "execution_count": 506,
+     "execution_count": 562,
      "metadata": {},
      "output_type": "execute_result"
     }
