--- a/cut_pkuseg.ipynb
+++ b/cut_pkuseg.ipynb
@@ -41,6 +41,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_articles_from_folder(foldername: str) -> [str]:\n",
+    "    article_names = os.listdir(foldername)\n",
+    "    article_contents = list()\n",
+    "    for article_name in article_names:\n",
+    "        file_name = 'data/' + article_name\n",
+    "        file = open(file_name, 'r')\n",
+    "        article_content = file.read()\n",
+    "        file.close()\n",
+    "        article_contents.append(article_content)\n",
+    "    \n",
+    "    return article_contents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = get_articles_from_folder('data')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -160,46 +188,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "73"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(doc_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14992"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(doc_matrix[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
@@ -224,28 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "article_indexes.to_csv('termdocmatrix/article_indexes.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "term_indexes.to_csv('termdocmatrix/term_indexes.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "article_indexes.to_csv('termdocmatrix/article_indexes.csv', index=False)\n",
+    "\n",
+    "term_indexes.to_csv('termdocmatrix/term_indexes.csv', index=False)\n",
+    "\n",
     "np.savetxt(\n",
     "    fname = 'termdocmatrix/doc_matrix.txt',\n",
     "    X = np.array(doc_matrix).astype(int),\n",
@@ -254,6 +228,204 @@
     "    fmt = '%u'\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def save_all_to_output(\n",
+    "    article_indexes_filename: str,\n",
+    "    term_indexes_filename: str,\n",
+    "    doc_matrix_filename: str\n",
+    "):\n",
+    "\n",
+    "    article_indexes.to_csv('termdocmatrix/article_indexes.csv', index=False)\n",
+    "\n",
+    "    term_indexes.to_csv('termdocmatrix/term_indexes.csv', index=False)\n",
+    "\n",
+    "    np.savetxt(\n",
+    "        fname = 'termdocmatrix/doc_matrix.txt',\n",
+    "        X = np.array(doc_matrix).astype(int),\n",
+    "        delimiter = ',',\n",
+    "        newline = '\\n',\n",
+    "        fmt = '%u'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def save_all_to_output(\n",
+    "\n",
+    "    article_indexes: pd.DataFrame,\n",
+    "    article_indexes_filename: str,\n",
+    "\n",
+    "    term_indexes: pd.DataFrame,\n",
+    "    term_indexes_filename: str,\n",
+    "\n",
+    "    doc_matrix: [[int]],\n",
+    "    doc_matrix_filename: str\n",
+    "\n",
+    ") -> None:\n",
+    "\n",
+    "    article_indexes.to_csv('termdocmatrix/article_indexes.csv', index=False)\n",
+    "\n",
+    "    term_indexes.to_csv('termdocmatrix/term_indexes.csv', index=False)\n",
+    "\n",
+    "    np.savetxt(\n",
+    "        fname = 'termdocmatrix/doc_matrix.txt',\n",
+    "        X = np.array(doc_matrix).astype(int),\n",
+    "        delimiter = ',',\n",
+    "        newline = '\\n',\n",
+    "        fmt = '%u'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def foo() -> [int]:\n",
+    "    return [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/mike/jieba'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/mike/jieba/data/a.txt'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.join(os.path.abspath('data/'), 'a.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-70-8b86236ed701>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-70-8b86236ed701>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    full_path = os.path.join(, article_name)\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_articles_from_folder(foldername: str) -> ([str], [str]):\n",
+    "\n",
+    "    abs_dir_path = os.path.abspath(foldername)\n",
+    "    article_names = os.listdir(abs_dir_path)\n",
+    "    article_contents = list()\n",
+    "    for article_name in article_names:\n",
+    "        full_path = os.path.join(, article_name)\n",
+    "        file_name = full_path\n",
+    "        file = open(file_name, 'r')\n",
+    "        article_content = file.read()\n",
+    "        file.close()\n",
+    "        article_contents.append(article_content)\n",
+    "    \n",
+    "    return (article_names, article_contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# tuple.1 is article_names, tuple.2 is article_contents\n",
+    "def get_articles_from_folder(foldername: str) -> ([str], [str]):\n",
+    "\n",
+    "    abs_dir_path = os.path.abspath(foldername)\n",
+    "    article_names = os.listdir(abs_dir_path)\n",
+    "    article_contents = list()\n",
+    "    for article_name in article_names:\n",
+    "        full_path = os.path.join(abs_dir_path, article_name)\n",
+    "        file_name = full_path\n",
+    "        file = open(file_name, 'r')\n",
+    "        article_content = file.read()\n",
+    "        file.close()\n",
+    "        article_contents.append(article_content)\n",
+    "    \n",
+    "    return (article_names, article_contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names, contents = get_articles_from_folder('data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
