--- a/cut_pkuseg.ipynb
+++ b/cut_pkuseg.ipynb
@@ -422,6 +422,237 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1,2,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import AnyStr, Callable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def cut_articles(\n",
+    "    article_contents: [str], \n",
+    "    cutter: Callable[[str], AnyStr]\n",
+    ") -> [[str]]:\n",
+    "    article_words = list()\n",
+    "    for i in tqdm(range(len(article_contents))):\n",
+    "        article_content = article_contents[i]\n",
+    "        words = seg.cut(article_content)\n",
+    "        article_words.append(words)\n",
+    "    \n",
+    "    return article_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cutter = pkuseg.pkuseg()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_arts = [\n",
+    "    '你好天安门',\n",
+    "    '我爱北京天安门',\n",
+    "    '美丽的蓝天'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['你好天安门', '我爱北京天安门', '美丽的蓝天']"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_arts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 2013.27it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = cut_articles(\n",
+    "    my_arts,\n",
+    "    cutter\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['你好', '天安门'], ['我', '爱', '北京', '天安门'], ['美丽', '的', '蓝天']]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 统计一个列表中各个元素出现的次数\n",
+    "def counter(l: list) -> dict:\n",
+    "    stats = dict()\n",
+    "    for i in range(len(l)):\n",
+    "        item = l[i]\n",
+    "        if item not in stats:\n",
+    "            stats[item] = 1\n",
+    "        else:\n",
+    "            stats[item] = stats[item] + 1\n",
+    "    \n",
+    "    return stats\n",
+    "\n",
+    "# 统计每篇文章的词频\n",
+    "def do_stats(article_words: [[str]]) -> [Dict[str, int]]:\n",
+    "    article_stats = list()\n",
+    "    for i in tqdm(range(len(article_words))):\n",
+    "        article_stats.append(counter(article_words[i]))\n",
+    "    \n",
+    "    return article_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 13329.36it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = do_stats(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 统计每一个出现过的单词的出现频数\n",
+    "def make_all_term_stats(article_stats: [dict]) -> Dict[str, int]:\n",
+    "    all_term_stats = dict()\n",
+    "    for i in tqdm(range(len(article_stats))):\n",
+    "        article_stat = article_stats[i]\n",
+    "        for word, count in article_stat.items():\n",
+    "            if word not in all_term_stats:\n",
+    "                all_term_stats[word] = count\n",
+    "            else:\n",
+    "                all_term_stats[word] = all_term_stats[word] + count\n",
+    "    \n",
+    "    return all_term_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 15968.16it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'你好': 1, '天安门': 2, '我': 1, '爱': 1, '北京': 1, '美丽': 1, '的': 1, '蓝天': 1}"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_all_term_stats(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
