--- a/cut_pkuseg.ipynb
+++ b/cut_pkuseg.ipynb
@@ -626,29 +626,447 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:00<00:00, 15968.16it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 19239.93it/s]\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "at = make_all_term_stats(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "{'你好': 1, '天安门': 2, '我': 1, '爱': 1, '北京': 1, '美丽': 1, '的': 1, '蓝天': 1}"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_all_term_stats(s)"
+    "at"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def make_all_term_vector(all_term_stats: dict) -> [str]:\n",
+    "    all_term_vector = list(all_term_stats.keys())\n",
+    "    return all_term_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "av = make_all_term_vector(at)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['你好', '天安门', '我', '爱', '北京', '美丽', '的', '蓝天']"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "av"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 计算 term_doc_matrix\n",
+    "def make_doc_matrix(article_stats: [dict], all_term_vector: [str]) -> [[int]]:\n",
+    "    doc_matrix = list()\n",
+    "    for i in tqdm(range(len(article_stats))):\n",
+    "        stat_of_this_article = article_stats[i]\n",
+    "        doc_matrix_row = list()\n",
+    "        for term in all_term_vector:\n",
+    "            if term in stat_of_this_article:\n",
+    "                count = stat_of_this_article[term]\n",
+    "            else:\n",
+    "                count = 0\n",
+    "            doc_matrix_row.append(count)\n",
+    "        \n",
+    "        doc_matrix.append(doc_matrix_row)\n",
+    "    \n",
+    "    return doc_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'你好': 1, '天安门': 1},\n",
+       " {'我': 1, '爱': 1, '北京': 1, '天安门': 1},\n",
+       " {'美丽': 1, '的': 1, '蓝天': 1}]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['你好', '天安门', '我', '爱', '北京', '美丽', '的', '蓝天']"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "av"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 12595.51it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dm = make_doc_matrix(s, av)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 0, 0, 0, 0, 0, 0], [0, 1, 1, 1, 1, 0, 0, 0], [0, 0, 0, 0, 0, 1, 1, 1]]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bar() -> Tuple[int, str]:\n",
+    "    return (1, '2', )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, '2')"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 构建文章名索引与单词索引\n",
+    "def make_indexes(article_names: [str]) -> Tuple[pd.DataFrame, pd.DataFrame,]:\n",
+    "    article_indexes = pd.DataFrame({\n",
+    "        'article_name': article_names,\n",
+    "        'row_num_in_doc_matrix': range(len(article_names))\n",
+    "    })\n",
+    "\n",
+    "    term_indexes = pd.DataFrame({\n",
+    "        'term': all_term_vector,\n",
+    "        'col_num_in_doc_matrix': range(len(all_term_vector))\n",
+    "    })\n",
+    "\n",
+    "    return (\n",
+    "        article_indexes,\n",
+    "        term_indexes,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 构建文章名索引与单词索引\n",
+    "def make_indexes(\n",
+    "    article_names: [str],\n",
+    "    all_term_vector: [str]\n",
+    ") -> Tuple[pd.DataFrame, pd.DataFrame,]:\n",
+    "    article_indexes = pd.DataFrame({\n",
+    "        'article_name': article_names,\n",
+    "        'row_num_in_doc_matrix': range(len(article_names))\n",
+    "    })\n",
+    "\n",
+    "    term_indexes = pd.DataFrame({\n",
+    "        'term': all_term_vector,\n",
+    "        'col_num_in_doc_matrix': range(len(all_term_vector))\n",
+    "    })\n",
+    "\n",
+    "    return (\n",
+    "        article_indexes,\n",
+    "        term_indexes,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1, p2 = make_indexes(['a','b','c'], av)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>article_name</th>\n",
+       "      <th>row_num_in_doc_matrix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  article_name  row_num_in_doc_matrix\n",
+       "0            a                      0\n",
+       "1            b                      1\n",
+       "2            c                      2"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>term</th>\n",
+       "      <th>col_num_in_doc_matrix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>你好</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>天安门</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>我</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>爱</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>北京</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>美丽</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>的</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>蓝天</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  term  col_num_in_doc_matrix\n",
+       "0   你好                      0\n",
+       "1  天安门                      1\n",
+       "2    我                      2\n",
+       "3    爱                      3\n",
+       "4   北京                      4\n",
+       "5   美丽                      5\n",
+       "6    的                      6\n",
+       "7   蓝天                      7"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p2"
    ]
   },
   {
