--- a/analysis_py.ipynb
+++ b/analysis_py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 563,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,33 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
     "from tqdm import tqdm\n",
-    "import pkuseg"
+    "import pkuseg\n",
+    "from typing import Tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 564,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 加载 doc_matrix 的行标、列标与 term, article 的对应关系\n",
-    "term_indexes = pd.read_csv('termdocmatrix/term_indexes.csv')\n",
-    "articles = pd.read_csv('termdocmatrix/article_indexes.csv')"
+    "def load_data_from_file(\n",
+    "    term_indexes_filename: str,\n",
+    "    article_indexes_filename: str,\n",
+    "    term_doc_matrix_filename: str\n",
+    ") -> Tuple[pd.DataFrame, pd.DataFrame, np.ndarray]:\n",
+    "    \n",
+    "    # 加载 doc_matrix 的行标、列标与 term, article 的对应关系\n",
+    "    term_indexes = pd.read_csv(term_indexes_filename)\n",
+    "    articles = pd.read_csv(article_indexes_filename)\n",
+    "    doc_matrix = np.loadtxt(term_doc_matrix_filename, delimiter=',')\n",
+    "    \n",
+    "    return (\n",
+    "        term_indexes,\n",
+    "        articles,\n",
+    "        doc_matrix,\n",
+    "    )\n",
+    "    "
    ]
   },
   {
