--- a/analysis_py.ipynb
+++ b/analysis_py.ipynb
@@ -130,37 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 467,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 是否没有 doc 的坐标全为 0\n",
-    "np.count_nonzero(np.sum(doc_matrix, axis=1)) == doc_matrix.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 468,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 计算tf-idf\n",
-    "idf = np.log(doc_matrix.shape[0]/np.count_nonzero(doc_matrix, axis = 0))\n",
-    "tf_idf = doc_matrix * idf \n",
-    "normalization_factor = np.tile(np.sum(tf_idf, axis = 1), reps=[ doc_matrix.shape[1], 1 ]).T\n",
-    "tf_idf = tf_idf/normalization_factor"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -178,22 +151,66 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 724,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# 通过 svd 进行 lsa 分析\n",
-    "u, s, vh = np.linalg.svd(tf_idf, full_matrices=True)\n",
-    "u.shape, s.shape, vh.shape"
+    "def foo() -> np.ndarray:\n",
+    "    return np.array([1,2,3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 725,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 725,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 726,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 将 原始空间 的 doc 投影到 特征空间\n",
-    "matS = np.zeros(shape=doc_matrix.shape)\n",
-    "matS[0:s.shape[0], 0:s.shape[0]] = np.diag(s)\n",
-    "doc_coords = np.matmul(u, matS)"
+    "def bar(a: np.ndarray):\n",
+    "    return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 727,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 727,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bar(np.array([1,2,3]))"
    ]
   },
   {
@@ -208,20 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 723,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25, 0.4 , 0.5 ])"
+      ]
+     },
+     "execution_count": 723,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 计算子 term_doc_matrix 的角标与 term_index 的对应关系\n",
-    "col_num_in_new_doc_matrix = pd.DataFrame({\n",
-    "    'col_num_in_new_doc_matrix': np.array(range(0, doc_matrix.shape[1]))\n",
-    "})\n",
-    "\n",
-    "selected_terms = selected_terms.reset_index(drop=True)\n",
-    "selected_terms = pd.concat(\n",
-    "    objs = [selected_terms, col_num_in_new_doc_matrix],\n",
-    "    axis = 1\n",
-    ")"
+    "np.divide([1,2,3], [4,5,6])"
    ]
   },
   {
@@ -254,27 +273,14 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# 接受用户输入\n",
-    "query_terms = seg.cut('多边形')\n",
-    "query_terms"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 556,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 构建 query_row, 这个 query_row 相当于一个 doc\n",
-    "query_row = np.array(range(doc_matrix.shape[1]))\n",
-    "query_row[:] = 0\n",
-    "query_row = np.reshape(a = query_row, newshape = (1, query_row.shape[0]))\n",
-    "for term in query_terms:\n",
-    "    if term in term_to_col_index:\n",
-    "        col_index = term_to_col_index[term]\n",
-    "        query_row[0, col_index] = 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -292,67 +298,35 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# 是否可以进行搜索\n",
-    "np.sum(query_row) > 0"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 558,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 将 query_row 投影到 lsa 特征空间\n",
-    "query_coord = np.matmul(query_row, vh.T)\n",
-    "\n",
-    "query_coord = query_coord[:, 0:doc_coords.shape[0]]\n",
-    "doc_coords = doc_coords[:, 0:doc_coords.shape[0]]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 559,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 用这个函数计算两个向量的余弦值\n",
-    "def cos_of_two_vector(x1, x2):\n",
-    "    n_x1 = np.linalg.norm(x1)\n",
-    "    n_x2 = np.linalg.norm(x2)\n",
-    "    inner_prod = np.abs(np.sum(x1 * x2))\n",
-    "    \n",
-    "    if n_x1 * n_x2 == 0:\n",
-    "        n_x1 = n_x1 + (1E-10)\n",
-    "        n_x2 = n_x2 + (1E-10)\n",
-    "        \n",
-    "    return inner_prod / (n_x1 * n_x2)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 560,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 计算 query_coord (它是查询关键字组成的 word_vector 的 lsa 特征空间的投影) 与\n",
-    "# doc 在特征空间中的投影的余弦值，以此来判断接近程度\n",
-    "cos_values = list()\n",
-    "for i in range(doc_coords.shape[0]):\n",
-    "    doc_coord = doc_coords[i, :]\n",
-    "    cos_value = cos_of_two_vector(query_coord, doc_coord)\n",
-    "    cos_values.append(cos_value)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 561,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 更新匹配度那一列\n",
-    "articles['match_val'] = cos_values"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -492,10 +466,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# 展示搜索结果\n",
-    "articles.sort_values(by = 'match_val', ascending=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
