--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "id": "extensive-vulnerability",
+   "execution_count": 2,
+   "id": "incorrect-inquiry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "comic-makeup",
+   "id": "compound-conservative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "dramatic-security",
+   "id": "liable-pointer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "republican-testament",
+   "id": "distributed-lease",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "healthy-influence",
+   "id": "gorgeous-norfolk",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "threatened-question",
+   "id": "intense-horror",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "sorted-membrane",
+   "id": "acknowledged-polls",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "extra-retention",
+   "id": "resistant-disposition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "genetic-denver",
+   "id": "posted-essence",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "turkish-kingdom",
+   "id": "pressing-dispute",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "passive-banks",
+   "id": "brown-mattress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "palestinian-stanley",
+   "id": "classical-surge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "posted-apparatus",
+   "id": "intended-departure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "adjacent-atmosphere",
+   "id": "nasty-scottish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "planned-miniature",
+   "id": "ancient-survey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "liberal-attachment",
+   "id": "banner-transformation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "capable-ladder",
+   "id": "royal-device",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "linear-andrews",
+   "id": "nominated-cosmetic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "velvet-denial",
+   "id": "compound-basis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "extensive-broadcast",
+   "id": "configured-storage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "handed-reference",
+   "id": "greek-worst",
    "metadata": {},
    "outputs": [
     {
@@ -326,8 +326,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "informational-hindu",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[1],[2],[3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "emotional-canadian",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "appointed-greek",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(a.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "lightweight-fantasy",
+   "id": "outside-strap",
    "metadata": {},
    "outputs": [],
    "source": []
